packages/next-swc/crates/core/tests/errors/next-font-loaders/spread-arg/input.js
import { Inter } from 'neer-font/google'

const a = fn(...{}, ...[])
const inter = Inter(...{}, ...[])
